# amatorch

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  ama_training.py  ama_training_dsp.py  pyproject.toml  script_to_notebook.py  setup.py
ama_library/: __init__.py  ama_class.py  ama_utilities.py  geometry.py  plotting.py  quadratic_moments.py  utilities.py
ama_library/data/: load.py
ama_library/data/disparity/: label_values.csv
docs/source/: conf.py  index.md  models_api.md
docs/source/tutorials/: ama_model_structure.md
notebooks/: ama_basic_tutorial.ipynb  ama_batch_size_analysis_dsp.ipynb  ama_batch_size_analysis_dsp.py  ama_filter_learning_robustness.ipynb  ama_manifold_geometry_analysis.ipynb  ama_sequential_training.ipynb  ama_sequential_training_dsp.ipynb  ama_training_dsp.ipynb  normalized_cov_approximation.ipynb
scripts/: ama_basic_tutorial.py  ama_batch_size_analysis_dsp.py  ama_filter_learning_robustness.py  ama_manifold_geometry_analysis.py  ama_sequential_training_dsp.py  ama_training_dsp.py  normalized_cov_approximation.py
scripts/tutorials/: 1_ama_basic_functions.py  2_ama_basic_training.py  ama_basic_tutorial.py  ama_batch_size_analysis_dsp.py  ama_filter_learning_robustness.py  ama_manifold_geometry_analysis.py  ama_sequential_training_dsp.py  ama_types.py  normalized_cov_approximation.py
src/amatorch/: __init__.py  ama_class.py  constraints.py  data_wrangle.py  inference.py  normalization.py  optim.py  plotting.py  utilities.py
src/amatorch/data/: __init__.py  load.py
src/amatorch/data/disparity/: filters.csv
src/amatorch/datasets/: __init__.py  load.py
src/amatorch/datasets/disparity/: filters.csv  labels.csv
src/amatorch/models/: __init__.py  _buffers_dict.py  ama_gauss.py  ama_parent.py  buffers_dict.py
src/amatorch/plot/: __init__.py  colors.py  filters.py  inference.py  output_summary.py  responses.py  statistics.py  utils.py
tests/: 01_ama_release_test.py  1_basic_pipeline_test.py  1_test_synthetic_data.py  2_real_data_pipeline.py  ama_gauss_inference_test.py  ama_gauss_training_test.py  data_loading_test.py  dtype_test.py  inference_test.py  test_plotting.py  training_test.py  utility_functions.py
tests/test_data/: dspCtg.csv
tutorials/: script_to_notebook.py
tutorials/notebooks/: 1_ama_basic_functions.ipynb  2_ama_basic_training.ipynb
tutorials/scripts/: 1_ama_basic_functions.py  2_ama_basic_training.py
