[project]
name = "amatorch"
requires-python = ">= 3.7"
dynamic = ["version"]
authors = [
  {name = "Daniel Herrera-Esposito", email = "dherrera1911@gmail.com"}
]
description = "Pytorch library for supervised optimal filter learning."
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
  "numpy>=1.1",
  "torch>1.8",
  "scipy>=1.0",
  "matplotlib",
  "importlib-resources>=6.0",
  "tqdm>=4.29",
]
keywords = ['neuroscience', 'machine learning', 'perception', 'pytorch', 'ideal observer']

[project.optional-dependencies]
dev = [
    "pytest>=5.1.2",
    'pytest-cov',
    'pytest-xdist']

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/dherrera1911/amatorch"

[tool.pytest.ini_options]
addopts = "--cov=amatorch --cov-report term-missing -n auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-include = ["*.ipynb"]
src = ["src", "tests"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs",
    ]

# Set the maximum line length (same as Black)
line-length = 88

indent-width = 4 # same as Black

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes: basic static analzsis for common errors like undefined names
    # and missing imports.
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "D",
]
ignore = ["SIM105"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
